# darknet

./: .gitignore  CM_source.cmake  CM_version.cmake  CMakeLists.txt
DarknetDotnet/: DarknetDotnet.csproj  Detection.cs  Extensions.cs  InteropMethods.cs  Program.cs  Stats.cs  TruthBox.cs  Validator.cs  YoloDetector.cs  YoloItem.cs  calset.cfg  calset.names
DarknetImageValidator/: DarknetImageValidator.csproj  Options.cs  Program.cs  cfg-y4-smaller.cfg  cfg-y4-smaller.data  cfg-y4-smaller.names
DarknetImageValidator/Properties/: launchSettings.json
src-cli/: darknet.cpp
src-dotnet/: CMakeLists.txt  darknetdotnet.cpp  darknetdotnet.hpp
src-lib/: CMakeLists.txt  box.cpp  dark_cuda.cpp  darknet.h  data.cpp  detector.cpp  http_stream.cpp  image_opencv.cpp  interop.cpp  interop.hpp  network.cpp  nightmare.cpp  route_layer.cpp  yolo.cpp  yolo_v2_class.cpp  yolo_v2_class.hpp
